# LinearSmoothing_SFEM

./: .gitignore  CMakeLists.txt  csfem_build.sh  csfem_run.sh  esfem_build.sh  esfem_run.sh  main.cpp
01-DOCs/: ref.bib
02-Matlab/: linearFEM2D_cantilever.m  linearFEM2D_plate_hole.m  linearSFEM2D_cell_plate_hole.m  patch_linearSFEM2D_edge.m  patch_nonlinearFEM2D.m  patch_nonlinearSFEM2D_cell.m
02-Matlab/gmsh/Cook/: Cook_1.geo  Cook_1.mat  Cook_1.msh  Cook_1_elements.txt  Cook_2.mat  Cook_2.msh  Cook_2_elements.txt  Cook_2_l2q_elements.txt  Cook_2_l2q_nodes.txt  Cook_2_nodes.txt  Cook_3.msh  Cook_3_elements.txt  Cook_3_l2q_elements.txt  Cook_4.geo  Cook_4.msh  Cook_4_elements.txt  Cook_4_l2q_elements.txt  Cook_5.mat  cook_5.msh
02-Matlab/gmsh/Indentation/: Indentation_24x4.mat  Indentation_28x4.mat  Indentation_4x4.mat
02-Matlab/gmsh/PlateHole/: PlateHole_1.mat  PlateHole_1.msh  PlateHole_1_l2q_elements.txt  PlateHole_1_l2q_nodes.txt  PlateHole_1_nodes.txt  PlateHole_2.geo  PlateHole_2.mat  PlateHole_2_l2q_elements.txt  PlateHole_2_l2q_nodes.txt  PlateHole_3.geo  PlateHole_3.mat  PlateHole_3_l2q_elements.txt  PlateHole_4.geo  PlateHole_4.mat  PlateHole_4.msh  PlateHole_4_nodes.txt  PlateHole_5.mat  PlateHole_5_l2q_nodes.txt
02-Matlab/gmsh/T3_to_T6/: example_nodes.txt  i4_modp.m  i4_wrap.m  i4col_swap.m  i4mat_transpose_print_some.m  i4mat_write.m  mesh_base_one.m  r8mat_header_read.m  r8mat_transpose_print_some.m  s_word_count.m  triangulation_l2q.m
02-Matlab/models/: elementQ4.m  elementQ8.m  elementT3.m  elementT4.m  model_BendingBlock.m  model_Comp_DBC.m  model_SS_DBC.m  model_quad_patch.m
02-Matlab/results/: CustomColors.m  comp_result.m
02-Matlab/sources/: FEM2D_cantilever_analytic.m  FEM2D_cantilever_force.m  SFEM2D_edge_T6_cantilever_analytic_1.m  VTKPostProcess.m  cal_nx_ny.m  exactPlateHole.m  exactPlateHole_nl.m  feaplyc2.m  forcePlateHole.m  getCoeff.m  getNonlinearBmat2D.m  linearSFEM2D_cell_stiffness.m  linearSFEM2D_cell_stiffness_Q8_1.m  linearSFEM2D_cell_stiffness_Q9_1.m  linearSFEM2D_cell_stiffness_T3.m  linearSFEM2D_cell_stiffness_T3_1.m  linearSFEM2D_cell_stiffness_T6_1.m  linearSFEM2D_edge_stiffness_T3.m  linearSFEM2D_edge_stiffness_T6_1.m  meshGeneration2D.m  nonlinearConstitutive.m  plot_mesh.m  polygeom.m  quad_patch_force_edge.m  quad_patch_force_edge_1.m  quadrature.m  wachspress2D.m
02-Matlab/sources/esfem-K_backup/: linearSFEM2D_edge_stiffness_T6.m  linearSFEM2D_edge_stiffness_T6_1.m  linearSFEM2D_edge_stiffness_T6_1_2.m
02-Patch/: csfem_run.sh  esfem_run.sh  main.cpp
02-Patch/data/: high_order_patch.msh  linear_patch.geo  linear_patch.vtu  mode_test.geo  mode_test.msh  mode_test.vtu
02-Patch/include/: model_parameters.hpp  nonlinear_sfem_t6.hpp  sfem_assemblers.hpp  sfem_framework.hpp  sfem_io.hpp  sfem_material.hpp  sfem_mesh.hpp  sfem_shared.hpp  sfem_solver_utils.hpp  structural_solver.hpp
02-Patch/src/: nonlinear_csfem_t6.cpp  sfem_edge_assembler.cpp  sfem_framework.cpp  sfem_mesh.cpp  structural_problem_library.cpp  structural_solver.cpp  vtk_writer.cpp
02-Patch/src/apps/: main_esfem.cpp
99-Matlab/: linearSFEM2D_cell_cantilever.m  linearSFEM2D_edge_cantilever.m  linearSFEM2D_edge_plate_hole.m  nonlinearFEM2D_cantilever.m  patch_linearFEM2D.m  patch_linearSFEM2D_cell.m  patch_nonlinearSFEM2D_edge.m
99-Matlab/gmsh/: msh2mat.m
99-Matlab/gmsh/Cook/: Cook_1_l2q_elements.txt  Cook_1_l2q_nodes.txt  Cook_1_nodes.txt  Cook_2.geo  Cook_3.geo  Cook_3.mat  Cook_3_l2q_nodes.txt  Cook_3_nodes.txt  Cook_4.mat  Cook_4_l2q_nodes.txt  Cook_4_nodes.txt  Cook_5_elements.txt  Cook_5_l2q_elements.txt  Cook_5_l2q_nodes.txt  Cook_5_nodes.txt  cook_5.geo
99-Matlab/gmsh/Indentation/: Indentation_12x4.mat  Indentation_16x4.mat  Indentation_20x4.mat  Indentation_8x4.mat  meshDistortionIndentation.m
99-Matlab/gmsh/PlateHole/: PlateHole_1.geo  PlateHole_1_elements.txt  PlateHole_2.msh  PlateHole_2_elements.txt  PlateHole_2_nodes.txt  PlateHole_3.msh  PlateHole_3_elements.txt  PlateHole_3_l2q_nodes.txt  PlateHole_3_nodes.txt  PlateHole_4_elements.txt  PlateHole_4_l2q_elements.txt  PlateHole_4_l2q_nodes.txt  PlateHole_5.geo  PlateHole_5.msh  PlateHole_5_elements.txt  PlateHole_5_l2q_elements.txt  PlateHole_5_nodes.txt
99-Matlab/gmsh/T3_to_T6/: example_elements.txt  file_column_count.m  file_row_count.m  i4col_compare.m  (+13 more)
99-Matlab/models/: elementQ9.m  elementT6.m  model_Cantilever.m  model_Comp_NBC.m  model_Cook.m  model_Indentation.m  model_NOT_SS_DBC.m  model_PlateHole.m  model_SS_NBC.m  model_lin_patch.m
99-Matlab/results/: Result_Comp_DBC.m  bending_block_result.m  not_ss_dbc_result.m  ss_dbc_results.m  ss_nbc_results.m
99-Matlab/sources/: FEM2D_T3_cantilever_force.m  FEM2D_T6_cantilever_force.m  SFEM2D_edge_T3_cantilever_analytic.m  SFEM2D_edge_T6_cantilever_analytic.m  cal_side.m  cal_xieta.m  feaplyc2_nl.m  getSerendipityShapeFunc_lagrange.m  getTargetEdge.m  lagrange_basis.m  linearConstitutive.m  linearFEM2D_stiffness.m  linearSFEM2D_cell_stiffness_Q8.m  linearSFEM2D_cell_stiffness_Q9.m  linearSFEM2D_cell_stiffness_T6.m  linearSFEM2D_edge_stiffness_T3_1.m  linearSFEM2D_edge_stiffness_T3_2.m  linearSFEM2D_edge_stiffness_T6.m  nonlinearFEM2D_stiffness.m  nonlinearSFEM2D_cell_stiffness.m  nonlinearSFEM2D_edge_stiffness_T6.m  plotField.m  plotMesh.m  quad_patch_force_cell.m  xi_eta4xy.m
build-umfpack-check/: CMakeCache.txt  Makefile  cmake_install.cmake
data/: Cant.geo  Cook.geo  Cook2.geo  Cook3.geo  Cook4.geo  Cook5.geo  LShaped.geo  msh_to_vtu.py  run_mesh.sh
include/: benchmark_utils.hpp  model_parameters.hpp  nonlinear_esfem_t6.hpp  sfem_basis.hpp  sfem_framework.hpp  sfem_io.hpp  sfem_mesh.hpp  sfem_solver_utils.hpp  structural_problem_library.hpp  structural_solver.hpp
src/: nonlinear_csfem_t6.cpp  nonlinear_esfem_t6.cpp  nonlinear_esfem_t6_problem.cpp  nonlinear_sfem_t6_problem.cpp  sfem_basis.cpp  sfem_edge_assembler.cpp  sfem_framework.cpp  sfem_io.cpp  sfem_material.cpp  sfem_solver_utils.cpp  structural_problem_library.cpp  structural_solver.cpp  vtk_writer.cpp
src/apps/: main_csfem.cpp  main_esfem.cpp
(+21 files in other folders)
